--- a/sass/layout/_foot.scss
+++ b/sass/layout/_foot.scss
@@ -1,10 +1,11 @@
-/* ........... pied de page .........*/
+/* ........... pied de page .........*
 /* _foot.scss */
 .foot{
     background-color: $color-back-foot;
     color: $color-txt-foot;
     padding: 25px;
     padding-bottom: 40px;
+    min-width: 300px;
     /* titre oh my food footer */
     &__title{
         font-size: $size-title-foot;
