--- a/sass/layout/media-queries/_main-menu-media.scss
+++ b/sass/layout/media-queries/_main-menu-media.scss
@@ -1,7 +1,6 @@
 @include responsive(tablette){
     .menu{
         &-plats{
-            top: 360px;
             &__title{
                 h1{
                     font-size: $size-title-menu * 1.2;
@@ -33,63 +32,7 @@
             i{
                 font-size: $size-logo-check + 5px;
                 top: 33px;
-                right: 5.5%;
-            }
-        }   
-    }
-    .two-plate__type{
-        &-dish{
-            font-size: $size-name-dish * 1.3;
-        }
-        &-under{
-            width: 55px;
-            height: 4px;
-        }
-        &-food{
-            &-txt{
-                &-title{
-                font-size: $size-title-food;
-                }
-                &-with{
-                    font-size: $size-sent-with;
-                }
-            }
-            &-price{
-                margin-top: 50px;
-                font-size: $size-price;
-            }
-            i{
-                font-size: $size-logo-check + 5;
-                top: 33px;
-                right: 5.5%;
-            }
-        }   
-    }
-    .three-plate__type{
-        &-dish{
-            font-size: $size-name-dish * 1.3;
-        }
-        &-under{
-            width: 55px;
-            height: 4px;
-        }
-        &-food{
-            &-txt{
-                &-title{
-                font-size: $size-title-food;
-                }
-                &-with{
-                    font-size: $size-sent-with;
-                }
-            }
-            &-price{
-                margin-top: 50px;
-                font-size: $size-price;
-            }
-            i{
-                font-size: $size-logo-check + 5;
-                top: 33px;
-                right: 5.5%;
+                left: 96%;
             }
         }   
     }
@@ -106,7 +49,7 @@
         font-size: 23px;
         border-radius: 38px;
         margin-top: 30px;
-        margin-bottom: 70px;
+        margin-bottom: 30px;
     }
 }
 // desktop
@@ -116,7 +59,6 @@
             height: 560px;
         }
         &-plats{
-            top: 560px;
             &__title{
                 h1{
                     font-size: $size-title-menu * 1.4;
@@ -125,6 +67,11 @@
                     margin-bottom: 50px;
                 }
             }
+        }
+    }
+    .plate__type-food{
+        i{
+            left: 97%;
         }
     }
     .color-heart-btn-resto{
