--- a/sass/layout/media-queries/_header-acceuil-media.scss
+++ b/sass/layout/media-queries/_header-acceuil-media.scss
@@ -1,4 +1,4 @@
-// fichier media querie pour la partie header avec le logo oh my food
+/* fichier media querie pour la partie header avec le logo oh my food */
 
 @include responsive(tablette){
     .heading{
