--- a/css/style-resto.css
+++ b/css/style-resto.css
@@ -494,6 +494,7 @@ a {
   margin-top: 10px;
 }
 
+/* fichier media querie pour la partie header avec le logo oh my food */
 @media screen and (min-width: 768px) {
   .heading {
     height: 94.25px;
@@ -623,8 +624,7 @@ a {
   font-size: 28px;
 }
 
-/* partie contenant les différentes propositions */
-/* proposition 1 */
+/* partie contenant les différentes propositions de plats */
 .plate {
   max-width: 1000px;
   margin: auto;
@@ -740,6 +740,7 @@ a {
   animation: apparition 1000ms 600ms cubic-bezier(0.02, 0.73, 0.46, 1.06) both;
 }
 
+/* bouton commander */
 .btn-commande {
   display: flex;
   justify-content: center;
@@ -751,8 +752,15 @@ a {
   margin: auto;
   border-radius: 25px;
   margin-top: 10px;
+  box-shadow: #d5d4d4 5px 5px 10px;
+}
+.btn-commande:hover {
+  opacity: 0.9;
+  box-shadow: #afadad 5px 5px 10px;
 }
 
+/* media-queries partie centrale de la page menu (plat, assiette, bouton commander).
+/* media query tablette */
 @media screen and (min-width: 768px) {
   .menu-plats__title h1 {
     font-size: 33.6px;
@@ -779,6 +787,7 @@ a {
     top: 33px;
     left: 96%;
   }
+  /* option j'aime */
   .color-heart-btn-resto {
     right: 50px;
   }
@@ -786,6 +795,7 @@ a {
     right: 55px;
     font-size: 30px;
   }
+  /* bouton commander */
   .btn-commande {
     width: 300px;
     height: 75px;
@@ -795,6 +805,7 @@ a {
     margin-bottom: 30px;
   }
 }
+/* media-query desktop */
 @media screen and (min-width: 992px) {
   .menu__image {
     height: 560px;
@@ -828,6 +839,7 @@ a {
   left: 30px;
 }
 
+/* bouton de retour vers l'acceuil, media queries */
 @media screen and (min-width: 768px) {
   .heading__retour-acceuil {
     font-size: 26px;
